# r503-arduino

./: LICENSE  README.md  meson.build  meson_options.txt
fprintd.service.d/: r503-arduino-legacy.conf
r503-arduinod/: r503-arduinod.c  r503-arduinod.service
r503_bridge/: r503_bridge.ino
tod-r503-arduino/: tod-r503-arduino-legacy.c  tod-r503-arduino.h
